# meh-old

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  breadcrumb.cpp  breadcrumb.h  buffer.cpp  buffer.h  command.cpp  command.h  completer.cpp  completer.h  editor.cpp  editor.h  editor_menu.cpp  exec.cpp  exec.h  fd.cpp  fd.h  fileslookup.cpp  fileslookup.h  git.cpp  git.h  grep.cpp  grep.h  info_popup.cpp  info_popup.h  leader.cpp  line_number_area.cpp  line_number_area.h  lsp.cpp  lsp.h  lsp_manager.cpp  lsp_manager.h  main.cpp  meh.pro  mh.pro  mode.h  normal.cpp  references_widget.cpp  (+16 more)
lsp/: clangd.cpp  clangd.h  generic.cpp  generic.h  gopls.cpp  gopls.h  lsp_clangd.cpp  lsp_clangd.h  lsp_gopls.cpp  lsp_gopls.h  solargraph.cpp  solargraph.h  zls.cpp  zls.h
res/: LICENSES.txt  icon.icns  icon.sh
